@@ -12,12 +12,13 @@
         <!-- Telnet 控制台端口 -->
         <RSF_CONSOLE_PORT>2181</RSF_CONSOLE_PORT>
 
-        <!-- 单机模式:alone ,集群模式:master -->
+        <!-- 单机模式:alone -->
         <RSF_CENTER_WORK_MODE>alone</RSF_CENTER_WORK_MODE>
         <!-- Center工作在集群模式下的时候,集群的机器列表 -->
         <RSF_CENTER_SERVERS></RSF_CENTER_SERVERS>
         <!-- Keys文件( %WORK_HOME% 优先,如果没有再到classpath下查找) -->
         <RSF_CENTER_AUTH_FILE_NAME>auth_keys.xml</RSF_CENTER_AUTH_FILE_NAME>
+
     </hasor.environmentVar>
 
 </config>
