@@ -8,11 +8,11 @@
             <module>net.hasor.rsf.bootstrap.RsfFrameworkModule</module>
             <!-- RSF-Center 启动入口 -->
             <module>net.hasor.rsf.center.server.bootstrap.RsfCenterFrameworkModule</module>
-
-            <!-- Telnet控制台插件 -->
-            <module>net.hasor.rsf.console.RsfConsoleModule</module>
             <!-- 注册中心插件 -->
             <module>net.hasor.rsf.center.client.RsfCenterModule</module>
+            
+            <!-- Telnet控制台插件 -->
+            <module>net.hasor.rsf.console.RsfConsoleModule</module>
             <!-- Web支持插件 -->
             <module>net.hasor.rsf.web.RsfWebModule</module>
         </modules>
